Bu #6272: My default avatar is incorrect in the group info screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -884,6 +884,7 @@
     <string name="number_no_invite_contact_request" context="error message when reinviting multiple contacts">%1$d invite requests successfully sent but %2$d requests were not sent.</string>
 
     <string name="chat_me_text" context="Word next to own user's message in chat screen">Me</string>
+    <string name="chat_me_text_bracket" context="Word next to own user's message in chat screen">%1s (Me)</string>
     <string name="chat_I_text" context="Word next to own user's message in chat message">I</string>
     <string name="type_message_hint" context="Hint shown in the field to write a message in the chat screen">Type a message</string>
 
@@ -1067,7 +1068,4 @@
 
     <string name="recent_chat_empty_no_connection_title" context="Title of chat section when the app has no connection">No Internet connection</string>
     <string name="recent_chat_empty_no_connection_text" context="Text of chat section when the app has no connection">Chat is disabled and it cannot be enabled without connection.</string>
-
-
-    <string name="general_dissmiss" context="Answer for confirmation dialog.">Dismiss</string>
 </resources>
