--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -225,17 +225,17 @@
     <string name="file_properties_available_offline" context="The files are available &quot;offline&quot; (without a network Wi-Fi mobile data connection)">Available offline</string>
     <string name="file_properties_available_offline_on" context="Button state when a file can be saved for offline.(Capital letters)">ON</string>
     <string name="file_properties_available_offline_off" context="Button state when a file is already saved for offline. (Capital letters)">OFF</string>
-    <string name="file_properties_info_size_file" context="Refers to the size of a file.">Size: </string>
-    <string name="file_properties_info_content" context="header of a status field for what content a user has shared to you">Content: </string>
-    <string name="file_properties_info_added" context="when was the file added in MEGA">Added: </string>
-    <string name="file_properties_info_modified" context="when was the file modified">Modified: </string>
+    <string name="file_properties_info_size_file" context="Refers to the size of a file.">Size</string>
+    <string name="file_properties_info_content" context="header of a status field for what content a user has shared to you">Content </string>
+    <string name="file_properties_info_added" context="when was the file added in MEGA">Added</string>
+    <string name="file_properties_info_modified" context="when was the file modified">Modified</string>
     <string name="file_properties_shared_folder_private_folder" context="the folder is private. A public user can\'t access the folder">No public link</string>
     <string name="file_properties_shared_folder_public_link" context="the label when a folder can be accesed by public users">Public link</string>
     <string name="file_properties_shared_folder_full_access" context="Refers to access rights for a file folder.">Full access</string>
     <string name="file_properties_shared_folder_read_write" context="Refers to access rights for a file folder. (with the &amp; needed. Don\'t use the symbol itself. Use &amp;)">Read &amp; write</string>
     <string name="file_properties_shared_folder_read_only" context="Refers to access rights for a file folder.">Read-only</string>
     <string name="file_properties_shared_folder_shared_with" context="title of the screen that shows the users with whom the user has shared a folder">Shared with: </string>
-    <string name="file_properties_shared_folder_permissions" context="Item menu option upon clicking on a file folder. Refers to the permissions of a file folder in the file manager.">Permissions:</string>
+    <string name="file_properties_shared_folder_permissions" context="Item menu option upon clicking on a file folder. Refers to the permissions of a file folder in the file manager.">Permissions</string>
     <string name="dialog_select_permissions" context="Title of the dialog to choose permissions when sharing.">Share Permissions</string>
     <string name="file_properties_shared_folder_change_permissions" context="menu item">Change permissions</string>
     <string name="file_properties_shared_folder_select_contact" context="when listing all the contacts that shares a folder">Shared with</string>
