--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -325,7 +325,7 @@
     <string name="context_contact_invitation_deleted" context="success message when removing a contact request">Request deleted</string>
     <string name="context_contact_invitation_resent" context="success message when reinvite a contact">Request resent</string>
     <string name="context_contact_request_sent" context="success message when sending a contact request">Request correctly sent to %s. The status can be consulted in the Sent Requests tab.</string>
-    <string name="context_invitacion_reply" context="success message when adding a contact">Reply to the invitation sent</string>
+
     <string name="context_contact_removed" context="success message when removing a contact">Contact removed</string>
     <string name="context_contact_not_removed" context="error message">Error. Contact not removed</string>
     <string name="context_permissions_changed" context="success message when chaning the permissionss">Permissions changed</string>
@@ -1071,4 +1071,8 @@
     <string name="set_status_option_label" context="Label for the option of action menu to change the chat status">Set status</string>
 
     <string name="general_dismiss" context="Answer for confirmation dialog.">Dismiss</string>
+
+    <string name="context_invitacion_reply_accepted" context="Accepted request invitacion alert">Invitation accepted</string>
+    <string name="context_invitacion_reply_declined" context="Declined request invitacion alert">Invitation declined</string>
+    <string name="context_invitacion_reply_ignored" context="Ignored request invitacion alert">Invitation ignored</string>
 </resources>
