QA report #6409 - On Saved for offline (zero data) change the sentence "Empty folder" to "No files Saved for Offline"

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1097,4 +1097,6 @@
         <item context="the options of what to upload.">Busy</item>
         <item context="the options of what to upload.">Offline</item>
     </string-array>
+
+    <string name="offline_empty_folder" context="Text that indicates that a the offline section is currently empty">No files Saved for Offline</string>
 </resources>
