--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1085,9 +1085,9 @@
     <string name="settings_persistence_title" context="Title of the settings section to configure the status persistence of chat presence">Status persistence</string>
     <string name="settings_persistence_subtitle" context="Subtitle of the settings section to configure the status persistence of chat presence">Maintain my chosen status appearance even when I have no connected devices</string>
 
-    <string name="title_dialog_set_autoaway_value" context="Title of the dialog to set the value of the auto away preference">Set auto-away minutes</string>
+    <string name="title_dialog_set_autoaway_value" context="Title of the dialog to set the value of the auto away preference">Set time limit</string>
     <string name="button_set" context="Button to set a value">Set</string>
-    <string name="hint_minutes" context="Button to set a value">Minutes</string>
+    <string name="hint_minutes" context="Button to set a value">minutes</string>
 
     <string name="autoaway_disabled" context="Word to indicated the autoaway is disabled">Disabled</string>
 
